--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
@@ -465,7 +465,13 @@
 	}
 	a {
 		color: inherit;
+		transition: background-color .3s, box-shadow .3s;
+		display: block;
 		&:hover {
+			@include media-breakpoint-up(md) {
+				background-color: $x-light-blue;
+				box-shadow: 0 2px 16px rgba(#000, .2);
+			}
 			.entry-featured-image {
 				> .inner:after {
 					left: 0;
@@ -474,6 +480,20 @@
 				.image {
 					opacity: .4;
 				}
+			}
+			> .bottom-border {
+				width: 100%;
+				opacity: 1;
+			}
+		}
+		> .bottom-border {
+			display: none;
+			border-top: 0.375rem solid #444;
+			transition: opacity .3s, width .3s;
+			opacity: 0;
+			width: 0;
+			@include media-breakpoint-up(md) {
+				display: block;
 			}
 		}
 	}
@@ -530,6 +550,13 @@
 			}
 		}
 	}
+	.entry-header,
+	.entry-excerpt {
+		@include media-breakpoint-up(md) {
+			padding-left: 1rem;
+			padding-right: 1rem;
+		}
+	}
 	.entry-header {
 		margin-bottom: .5rem;
 	}
@@ -553,6 +580,9 @@
 		margin: 0;
 		font-size: 1.75rem;
 		font-weight: 500;
+	}
+	.entry-excerpt {
+		font-size: 1.125rem;
 	}
 }
 
