Adding related resources to end of resource page

--- a/wp-content/plugins/crown-blocks/src/block-resource-header/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-resource-header/style.scss
@@ -218,6 +218,7 @@
 		position: absolute;
 		right: 2rem;
 		top: calc(100% + 4rem);
+		z-index: 50;
 		@media (min-width: 1200px) {
 			display: block;
 		}
