--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
@@ -90,7 +90,8 @@
 					margin-bottom: calc(-100px - (7.5rem / 2));
 				}
 			}
-			body.single-post & {
+			body.single-post &,
+			body.single-resource & {
 				margin-bottom: 0;
 				padding-bottom: 0;
 			}
