--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -25119,6 +25119,11 @@ body.single-post #main-article .entry-footer .links {
         padding: 2rem; } }
     body.single-post #main-article .entry-footer .links a:hover {
       background-color: #E6EDF4; }
+      body.single-post #main-article .entry-footer .links a:hover:after {
+        -webkit-transform: none;
+            -ms-transform: none;
+                transform: none;
+        opacity: 1; }
     body.single-post #main-article .entry-footer .links a + a {
       -webkit-box-flex: 0;
           -ms-flex: 0 0 auto;
@@ -25140,11 +25145,17 @@ body.single-post #main-article .entry-footer .links {
       margin-top: .5rem;
       font-size: 2rem;
       line-height: 1;
-      -webkit-transition: color .2s;
-      transition: color .2s; }
+      -webkit-transition: opacity .2s, -webkit-transform .2s ease-out;
+      transition: opacity .2s, -webkit-transform .2s ease-out;
+      transition: opacity .2s, transform .2s ease-out;
+      transition: opacity .2s, transform .2s ease-out, -webkit-transform .2s ease-out; }
       @media (min-width: 576px) {
         body.single-post #main-article .entry-footer .links a:after {
-          font-size: 2.5rem; } }
+          font-size: 2.5rem;
+          opacity: 0;
+          -webkit-transform: translateX(-1rem);
+              -ms-transform: translateX(-1rem);
+                  transform: translateX(-1rem); } }
     body.single-post #main-article .entry-footer .links a .label {
       display: block;
       text-transform: uppercase;
