--- a/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
@@ -28,7 +28,8 @@ body.single-post {
 					&:hover {
 						background-color: $light-gray;
 						&:after {
-							// color: #fff;
+							transform: none;
+							opacity: 1;
 						}
 					}
 					+ a {
@@ -43,9 +44,11 @@ body.single-post {
 						margin-top: .5rem;
 						font-size: 2rem;
 						line-height: 1;
-						transition: color .2s;
+						transition: opacity .2s, transform .2s ease-out;
 						@include media-breakpoint-up(sm) {
 							font-size: 2.5rem;
+							opacity: 0;
+							transform: translateX(-1rem);
 						}
 					}
 					.label {
