Adding infinite load

--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -17680,6 +17680,8 @@ form.feed-filters {
 
 nav.pagination {
   display: block; }
+  nav.pagination.infinite {
+    text-align: center; }
   nav.pagination .nav-links {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -18811,6 +18813,27 @@ nav.pagination {
     display: block; }
   .ajax-loader.loading .ajax-content {
     opacity: .5; }
+  .ajax-loader.infinite.loading .pagination-wrapper {
+    opacity: .5; }
+    .ajax-loader.infinite.loading .pagination-wrapper:after {
+      display: block; }
+  .ajax-loader.infinite:after {
+    display: none; }
+  .ajax-loader.infinite .ajax-content {
+    opacity: 1; }
+  .ajax-loader.infinite .pagination-wrapper {
+    position: relative;
+    -webkit-transition: opacity .5s;
+    transition: opacity .5s; }
+    .ajax-loader.infinite .pagination-wrapper:after {
+      position: absolute;
+      content: '';
+      display: block;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      display: none; }
   .ajax-loader:after {
     position: absolute;
     content: '';
