--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_pagination.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_pagination.scss
@@ -4,6 +4,9 @@
 }
 nav.pagination {
 	display: block;
+	&.infinite {
+		text-align: center;
+	}
 	.nav-links {
 		display: flex;
 		flex-wrap: wrap;
