--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -2,18 +2,20 @@
 
 // Colors
 
-$dark-blue:     #233053 !default;
-$dark-med-blue: #1d406e !default;
-$blue:          #108DBC !default;
-$light-blue:    #D0E4F8 !default;
-$x-light-blue:  #F4F8FD !default;
-$red:           #E60045 !default;
-$green:         #AED540 !default;
-$light-gray:    #E6EDF4 !default;
-$gray:          #7F94AA !default;
-$dark-gray:     #343a40 !default;
-$ghost:         #F1F4F7 !default;
-$white:         #FFFFFF !default;
+$dark-blue:      #233053 !default;
+$dark-med-blue:  #012D61 !default;
+$blue:           #0381C3 !default;
+$light-med-blue: #98DBF9 !default;
+$light-blue:     #D0E4F8 !default;
+$x-light-blue:   #F4F8FD !default;
+$red:            #F7024D !default;
+$green:          #84C318 !default;
+$gray:           #696D7D !default;
+$rain:           #6A8EAE !default;
+$dark-gray:      #343a40 !default;
+$light-gray:     #CFD2D8 !default;
+$ghost:          #E0E0E0 !default;
+$white:          #FFFFFF !default;
 
 
 $colors: () !default;
