--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -18655,157 +18655,159 @@ nav.pagination {
     .text-color-light .weekly-event-count-shortcode.dot .count:before {
       background-color: rgba(255, 255, 255, 0.2); }
 
-.resource-teaser.resource_type-video a:hover .entry-featured-image > .inner:after, .resource-teaser.resource_type-webinar a:hover .entry-featured-image > .inner:after {
-  left: 50%;
-  -webkit-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-          transform: scale(1.1); }
-
-.resource-teaser.resource_type-video .entry-featured-image > .inner.dark:after, .resource-teaser.resource_type-webinar .entry-featured-image > .inner.dark:after {
-  background-image: url('data:image/svg+xml,%3csvg width="68px" height="87px" viewBox="0 0 68 87" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="%23FFFFFF"%3e%3cpath d="M0,2.154 L0,84.846 C0,86.0327487 1.31286893,86.7495111 2.31113639,86.1077677 L66.6271364,44.7617677 C67.5456212,44.1713132 67.5456212,42.8286868 66.6271364,42.2382323 L2.31113639,0.892232287 C1.31286893,0.250488924 0,0.96725131 0,2.154 Z M3,4.901 L63.042,43.5 L3,82.098 L3,4.901 Z" fill-rule="nonzero"%3e%3c/path%3e%3c/svg%3e'); }
-
-.resource-teaser.resource_type-video .entry-featured-image > .inner.light:after, .resource-teaser.resource_type-webinar .entry-featured-image > .inner.light:after {
-  background-image: url('data:image/svg+xml,%3csvg width="68px" height="87px" viewBox="0 0 68 87" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="%23233053"%3e%3cpath d="M0,2.154 L0,84.846 C0,86.0327487 1.31286893,86.7495111 2.31113639,86.1077677 L66.6271364,44.7617677 C67.5456212,44.1713132 67.5456212,42.8286868 66.6271364,42.2382323 L2.31113639,0.892232287 C1.31286893,0.250488924 0,0.96725131 0,2.154 Z M3,4.901 L63.042,43.5 L3,82.098 L3,4.901 Z" fill-rule="nonzero"%3e%3c/path%3e%3c/svg%3e'); }
-
-.resource-teaser.resource_type-video .entry-featured-image > .inner:after, .resource-teaser.resource_type-webinar .entry-featured-image > .inner:after {
-  content: '';
-  background-image: url('data:image/svg+xml,%3csvg width="68px" height="87px" viewBox="0 0 68 87" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="%23FFFFFF"%3e%3cpath d="M0,2.154 L0,84.846 C0,86.0327487 1.31286893,86.7495111 2.31113639,86.1077677 L66.6271364,44.7617677 C67.5456212,44.1713132 67.5456212,42.8286868 66.6271364,42.2382323 L2.31113639,0.892232287 C1.31286893,0.250488924 0,0.96725131 0,2.154 Z M3,4.901 L63.042,43.5 L3,82.098 L3,4.901 Z" fill-rule="nonzero"%3e%3c/path%3e%3c/svg%3e');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 4rem;
-  height: 4rem;
-  margin-top: -2rem;
-  left: 50%;
-  margin-left: -2rem;
-  opacity: 1;
-  -webkit-transition: -webkit-transform .3s;
-  transition: -webkit-transform .3s;
-  transition: transform .3s;
-  transition: transform .3s, -webkit-transform .3s; }
-
-.resource-teaser a {
-  color: inherit;
-  -webkit-transition: background-color .3s, -webkit-box-shadow .3s;
-  transition: background-color .3s, -webkit-box-shadow .3s;
-  transition: background-color .3s, box-shadow .3s;
-  transition: background-color .3s, box-shadow .3s, -webkit-box-shadow .3s;
-  display: block; }
-  @media (min-width: 768px) {
-    .resource-teaser a:hover {
-      background-color: #F4F8FD;
-      -webkit-box-shadow: 0 2px 16px rgba(0, 0, 0, 0.2);
-              box-shadow: 0 2px 16px rgba(0, 0, 0, 0.2); } }
-  .resource-teaser a:hover .entry-featured-image > .inner:after {
-    left: 0;
-    opacity: 1; }
-  .resource-teaser a:hover .entry-featured-image .image {
-    opacity: .4; }
-  .resource-teaser a:hover > .bottom-border {
-    width: 100%;
-    opacity: 1; }
-  .resource-teaser a > .bottom-border {
-    display: none;
-    border-top: 0.375rem solid #444;
-    -webkit-transition: opacity .3s, width .3s;
-    transition: opacity .3s, width .3s;
-    opacity: 0;
-    width: 0; }
-    @media (min-width: 768px) {
-      .resource-teaser a > .bottom-border {
-        display: block; } }
-
-.resource-teaser .entry-featured-image {
+.resource-teaser {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 1rem; }
-  .resource-teaser .entry-featured-image:before {
+  display: flex; }
+  .resource-teaser.resource_type-video a:hover .entry-featured-image > .inner:after, .resource-teaser.resource_type-webinar a:hover .entry-featured-image > .inner:after {
+    left: 50%;
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1); }
+  .resource-teaser.resource_type-video .entry-featured-image > .inner.dark:after, .resource-teaser.resource_type-webinar .entry-featured-image > .inner.dark:after {
+    background-image: url('data:image/svg+xml,%3csvg width="68px" height="87px" viewBox="0 0 68 87" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="%23FFFFFF"%3e%3cpath d="M0,2.154 L0,84.846 C0,86.0327487 1.31286893,86.7495111 2.31113639,86.1077677 L66.6271364,44.7617677 C67.5456212,44.1713132 67.5456212,42.8286868 66.6271364,42.2382323 L2.31113639,0.892232287 C1.31286893,0.250488924 0,0.96725131 0,2.154 Z M3,4.901 L63.042,43.5 L3,82.098 L3,4.901 Z" fill-rule="nonzero"%3e%3c/path%3e%3c/svg%3e'); }
+  .resource-teaser.resource_type-video .entry-featured-image > .inner.light:after, .resource-teaser.resource_type-webinar .entry-featured-image > .inner.light:after {
+    background-image: url('data:image/svg+xml,%3csvg width="68px" height="87px" viewBox="0 0 68 87" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="%23233053"%3e%3cpath d="M0,2.154 L0,84.846 C0,86.0327487 1.31286893,86.7495111 2.31113639,86.1077677 L66.6271364,44.7617677 C67.5456212,44.1713132 67.5456212,42.8286868 66.6271364,42.2382323 L2.31113639,0.892232287 C1.31286893,0.250488924 0,0.96725131 0,2.154 Z M3,4.901 L63.042,43.5 L3,82.098 L3,4.901 Z" fill-rule="nonzero"%3e%3c/path%3e%3c/svg%3e'); }
+  .resource-teaser.resource_type-video .entry-featured-image > .inner:after, .resource-teaser.resource_type-webinar .entry-featured-image > .inner:after {
     content: '';
-    display: block;
-    width: 0;
-    height: 0;
-    padding-top: 50%; }
-  .resource-teaser .entry-featured-image > .inner {
-    width: 100%;
-    position: relative;
-    background-color: #444;
-    overflow: hidden; }
-    .resource-teaser .entry-featured-image > .inner:after {
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      display: inline-block;
-      font-style: normal;
-      font-variant: normal;
-      font-weight: normal;
-      line-height: 1;
-      font-family: icomoon;
-      content: "";
-      position: absolute;
-      top: 50%;
-      margin-top: -1rem;
-      left: -.5rem;
-      width: 100%;
-      text-align: center;
-      -webkit-transition: left ease-out .15s, opacity .15s;
-      transition: left ease-out .15s, opacity .15s;
-      opacity: 0;
-      font-size: 2rem;
-      line-height: 1; }
-    .resource-teaser .entry-featured-image > .inner.dark {
-      color: #fff; }
-    .resource-teaser .entry-featured-image > .inner.light {
-      color: #233053; }
-  .resource-teaser .entry-featured-image .image {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-size: cover;
+    background-image: url('data:image/svg+xml,%3csvg width="68px" height="87px" viewBox="0 0 68 87" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="%23FFFFFF"%3e%3cpath d="M0,2.154 L0,84.846 C0,86.0327487 1.31286893,86.7495111 2.31113639,86.1077677 L66.6271364,44.7617677 C67.5456212,44.1713132 67.5456212,42.8286868 66.6271364,42.2382323 L2.31113639,0.892232287 C1.31286893,0.250488924 0,0.96725131 0,2.154 Z M3,4.901 L63.042,43.5 L3,82.098 L3,4.901 Z" fill-rule="nonzero"%3e%3c/path%3e%3c/svg%3e');
     background-position: center;
+    background-size: contain;
     background-repeat: no-repeat;
-    mix-blend-mode: multiply;
-    opacity: .5;
-    -webkit-filter: grayscale(1);
-            filter: grayscale(1);
-    -webkit-transition: opacity .3s;
-    transition: opacity .3s; }
-    .resource-teaser .entry-featured-image .image img {
-      display: none; }
-
-@media (min-width: 768px) {
-  .resource-teaser .entry-header,
+    width: 4rem;
+    height: 4rem;
+    margin-top: -2rem;
+    left: 50%;
+    margin-left: -2rem;
+    opacity: 1;
+    -webkit-transition: -webkit-transform .3s;
+    transition: -webkit-transform .3s;
+    transition: transform .3s;
+    transition: transform .3s, -webkit-transform .3s; }
+  .resource-teaser a {
+    width: 100%;
+    color: inherit;
+    -webkit-transition: background-color .3s, -webkit-box-shadow .3s;
+    transition: background-color .3s, -webkit-box-shadow .3s;
+    transition: background-color .3s, box-shadow .3s;
+    transition: background-color .3s, box-shadow .3s, -webkit-box-shadow .3s;
+    display: block;
+    position: relative; }
+    @media (min-width: 768px) {
+      .resource-teaser a {
+        padding-bottom: 0.375rem; } }
+    @media (min-width: 768px) {
+      .resource-teaser a:hover {
+        background-color: #F4F8FD;
+        -webkit-box-shadow: 0 2px 16px rgba(0, 0, 0, 0.2);
+                box-shadow: 0 2px 16px rgba(0, 0, 0, 0.2); } }
+    .resource-teaser a:hover .entry-featured-image > .inner:after {
+      left: 0;
+      opacity: 1; }
+    .resource-teaser a:hover .entry-featured-image .image {
+      opacity: .4; }
+    .resource-teaser a:hover > .bottom-border {
+      width: 100%;
+      opacity: 1; }
+    .resource-teaser a > .bottom-border {
+      display: none;
+      border-top: 0.375rem solid #444;
+      -webkit-transition: opacity .3s, width .3s;
+      transition: opacity .3s, width .3s;
+      opacity: 0;
+      width: 0;
+      position: absolute;
+      left: 0;
+      bottom: 0; }
+      @media (min-width: 768px) {
+        .resource-teaser a > .bottom-border {
+          display: block; } }
+  .resource-teaser .entry-featured-image {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 1rem; }
+    .resource-teaser .entry-featured-image:before {
+      content: '';
+      display: block;
+      width: 0;
+      height: 0;
+      padding-top: 50%; }
+    .resource-teaser .entry-featured-image > .inner {
+      width: 100%;
+      position: relative;
+      background-color: #444;
+      overflow: hidden; }
+      .resource-teaser .entry-featured-image > .inner:after {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: normal;
+        line-height: 1;
+        font-family: icomoon;
+        content: "";
+        position: absolute;
+        top: 50%;
+        margin-top: -1rem;
+        left: -.5rem;
+        width: 100%;
+        text-align: center;
+        -webkit-transition: left ease-out .15s, opacity .15s;
+        transition: left ease-out .15s, opacity .15s;
+        opacity: 0;
+        font-size: 2rem;
+        line-height: 1; }
+      .resource-teaser .entry-featured-image > .inner.dark {
+        color: #fff; }
+      .resource-teaser .entry-featured-image > .inner.light {
+        color: #233053; }
+    .resource-teaser .entry-featured-image .image {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      mix-blend-mode: multiply;
+      opacity: .5;
+      -webkit-filter: grayscale(1);
+              filter: grayscale(1);
+      -webkit-transition: opacity .3s;
+      transition: opacity .3s; }
+      .resource-teaser .entry-featured-image .image img {
+        display: none; }
+  @media (min-width: 768px) {
+    .resource-teaser .entry-header,
+    .resource-teaser .entry-excerpt {
+      padding-left: 1rem;
+      padding-right: 1rem; } }
+  .resource-teaser .entry-header {
+    margin-bottom: .5rem; }
+  .resource-teaser .entry-type {
+    margin-bottom: 1rem; }
+    .resource-teaser .entry-type .type {
+      -webkit-transition: background-color .2s, color .2s, boder-color .2s;
+      transition: background-color .2s, color .2s, boder-color .2s;
+      display: inline-block;
+      line-height: 1.2;
+      font-weight: 700;
+      font-size: 0.625rem;
+      letter-spacing: .05em;
+      text-transform: uppercase;
+      border-radius: 10rem;
+      border: 1px solid #233053;
+      padding: .5rem .75rem;
+      color: #233053; }
+  .resource-teaser .entry-title {
+    margin: 0;
+    font-size: 1.75rem;
+    font-weight: 500; }
   .resource-teaser .entry-excerpt {
-    padding-left: 1rem;
-    padding-right: 1rem; } }
-
-.resource-teaser .entry-header {
-  margin-bottom: .5rem; }
-
-.resource-teaser .entry-type {
-  margin-bottom: 1rem; }
-  .resource-teaser .entry-type .type {
-    -webkit-transition: background-color .2s, color .2s, boder-color .2s;
-    transition: background-color .2s, color .2s, boder-color .2s;
-    display: inline-block;
-    line-height: 1.2;
-    font-weight: 700;
-    font-size: 0.625rem;
-    letter-spacing: .05em;
-    text-transform: uppercase;
-    border-radius: 10rem;
-    border: 1px solid #233053;
-    padding: .5rem .75rem;
-    color: #233053; }
-
-.resource-teaser .entry-title {
-  margin: 0;
-  font-size: 1.75rem;
-  font-weight: 500; }
-
-.resource-teaser .entry-excerpt {
-  font-size: 1.125rem; }
+    font-size: 1.125rem; }
 
 .ajax-loader {
   position: relative; }
