--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
@@ -436,6 +436,7 @@
 }
 
 .resource-teaser {
+	display: flex;
 	&.resource_type-video,
 	&.resource_type-webinar {
 		a:hover {
@@ -464,9 +465,14 @@
 		}
 	}
 	a {
+		width: 100%;
 		color: inherit;
 		transition: background-color .3s, box-shadow .3s;
 		display: block;
+		position: relative;
+		@include media-breakpoint-up(md) {
+			padding-bottom: 0.375rem;
+		}
 		&:hover {
 			@include media-breakpoint-up(md) {
 				background-color: $x-light-blue;
@@ -492,6 +498,9 @@
 			transition: opacity .3s, width .3s;
 			opacity: 0;
 			width: 0;
+			position: absolute;
+			left: 0;
+			bottom: 0;
 			@include media-breakpoint-up(md) {
 				display: block;
 			}
