Revising resource header bg color

--- a/wp-content/plugins/crown-blocks/src/block-resource-header/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-resource-header/style.scss
@@ -7,6 +7,13 @@
 	@media (min-width: 1200px) {
 		margin-bottom: 4rem;
 	}
+
+	&.text-color-light {
+		color: #fff;
+	}
+	&.text-color-dark {
+		color: #333;
+	}
 	
 	> .header-bg {
 		position: absolute;
