--- a/wp-content/plugins/crown-blocks/src/block-testimonial/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-testimonial/style.scss
@@ -49,9 +49,19 @@
 			}
 		}
 	}
-	.testimonial-source {
+	.testimonial-source-container {
 		margin-bottom: 0;
 		margin-top: .75rem;
+		.image {
+			display: none;
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+			border-radius: 100%;
+			img {
+				display: none;
+			}
+		}
 	}
 
 }
