Updating a couple of theme colors

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -2,13 +2,13 @@
 
 // Colors
 
-$dark-blue:      #233053 !default;
+$dark-blue:      #032040 !default;
 $dark-med-blue:  #012D61 !default;
 $blue:           #0381C3 !default;
 $light-med-blue: #98DBF9 !default;
 $light-blue:     #D0E4F8 !default;
 $x-light-blue:   #F4F8FD !default;
-$red:            #F7024D !default;
+$red:            #D11141 !default;
 $green:          #84C318 !default;
 $gray:           #696D7D !default;
 $rain:           #6A8EAE !default;
