--- a/wp-content/plugins/crown-blocks/src/block-header/editor.scss
+++ b/wp-content/plugins/crown-blocks/src/block-header/editor.scss
@@ -3,8 +3,9 @@ $spacer: 1rem;
 .editor-styles-wrapper .wp-block[data-type="crown-blocks/header"] {
 	> .crown-block-editor-container > .wp-block-crown-blocks-header {
 		> hr {
-			height: 0.375rem;
+			height: 0.9375rem;
 			background-color: red;
+			background: linear-gradient(to right, rgba(red, 0), red);
 			border: none;
 			margin: 0;
 		}
