--- a/wp-content/plugins/crown-blocks/src/block-header/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-header/style.scss
@@ -4,13 +4,23 @@ $spacer: 0.25rem;
 	margin-bottom: 1.5rem;
 	padding-bottom: 0.375rem;
 	position: relative;
-	> hr {
+	> .hr-container {
 		position: absolute;
 		left: 0;
 		bottom: 0;
-		right: 0;
+		width: 100%;
+		height: 0.9375rem;
+		overflow: hidden;
+	}
+	> hr,
+	> .hr-container > hr {
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		width: 100%;
 		height: 0.9375rem;
 		background-color: red;
+		background: linear-gradient(to right, rgba(red, 0), red);
 		border: none;
 		margin: 0;
 	}
