Speeding up animation

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1534,7 +1534,7 @@
 		&.reveal-right {
 			width: 0;
 			&.animated {
-				transition: width 1s ease-out;
+				transition: width .5s ease-out;
 			}
 		}
 	}
