--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -21183,8 +21183,8 @@ nav.pagination {
   .wp-block-crown-blocks-header > .hr-container.reveal-right {
     width: 0; }
     .wp-block-crown-blocks-header > .hr-container.reveal-right.animated {
-      -webkit-transition: width 1s ease-out;
-      transition: width 1s ease-out; }
+      -webkit-transition: width .5s ease-out;
+      transition: width .5s ease-out; }
 
 .wp-block-crown-blocks-header > .hr-container > hr,
 .wp-block-crown-blocks-header > hr {
