Updating regional footer

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
@@ -210,6 +210,90 @@ body {
 }
 
 
+/*	Regional Info
+---------------------------------------------------------*/
+
+#site-footer-regional-info {
+	flex: 0 0 100%;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	margin-bottom: 2rem;
+	@include media-breakpoint-up(lg) {
+		flex: 1 1 0;
+	}
+	.contact {
+		h3 {
+			font-size: 1.25rem;
+			.bubble {
+				display: inline-block;
+				position: relative;
+				background-color: rgba($body-color, .1);
+				font-size: 1rem;
+				font-weight: 500;
+				padding: .5rem .75rem;
+				margin-top: -0.4rem;
+				margin-left: .5rem;
+				vertical-align: top;
+				&:after {
+					content: '';
+					border: 0px solid transparent;
+					border-top-color: rgba($body-color, .1);
+					border-right-width: 1.5rem;
+					border-top-width: .75rem;
+					top: 100%;
+					left: .75rem;
+					position: absolute;
+				}
+			}
+		}
+		.branch {
+			margin-bottom: 1rem;
+			text-transform: uppercase;
+			.name {
+				display: none;
+			}
+			.phone {
+				font-size: 2.5rem;
+				line-height: $line-height-sm;
+				font-weight: 700;
+			}
+		}
+	}
+	.regional-offices {
+		margin-top: 2rem;
+		h3 {
+			margin-bottom: 0.5rem;
+		}
+		ul {
+			font-size: 1.125rem;
+			margin: 0;
+			padding: 0;
+			list-style: none;
+			line-height: $line-height-sm;
+			column-count: 2;
+			column-gap: 2rem;
+			max-width: 800px;
+			@include media-breakpoint-up(md) {
+				column-count: 3;
+			}
+		}
+		li {
+			margin-top: 0.75rem;
+			display: inline-block;
+			width: 100%;
+			break-inside: avoid;
+		}
+		a {
+			color: inherit;
+			text-decoration: underline;
+			&:hover {
+				color: $blue;
+			}
+		}
+	}
+}
+
+
 /*	Footer Widgets
 ---------------------------------------------------------*/
 
@@ -288,7 +372,7 @@ body {
 /*	Footer Social Links
 ---------------------------------------------------------*/
 
-#footer .social-links {
+#footer .social-ctas {
 	padding-left: 1rem;
 	padding-right: 1rem;
 	margin-bottom: 2rem;
@@ -296,7 +380,10 @@ body {
 	@include media-breakpoint-up(lg) {
 		flex: 0 0 auto;
 		text-align: center;
+		margin-top: 3rem;
 	}
+}
+#footer .social-links {
 	h4 {
 		margin-bottom: 1.5rem;
 		font-size: 1rem;
@@ -321,6 +408,34 @@ body {
 				height: 3rem;
 				fill: rgba(mix($body-color, $ghost, 60%), 0.5);
 			}
+		}
+	}
+}
+
+
+/*	Footer CTA Links
+---------------------------------------------------------*/
+
+#footer-primary-cta-links {
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		margin-top: 2rem;
+		@include media-breakpoint-up(lg) {
+			margin-top: 3rem;
+		}
+	}
+	li {
+		margin-top: .5rem;
+	}
+	a {
+		@extend .btn;
+		@extend .btn-white;
+		display: block;
+		width: 100%;
+		@include media-breakpoint-up(lg) {
+			@include make-button-size(lg);
 		}
 	}
 }
