Updating site logos

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
@@ -146,7 +146,7 @@ body {
 		position: relative;
 		width: 100%;
 		// padding-top: 40%;
-		padding-top: 60%;
+		padding-top: percentage(275 / 400);
 		height: 0;
 		overflow: hidden;
 		// background-image: url(../img/logos/sbdc-california-450w.png);
